<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ldaptive-integration</artifactId>
  <packaging>jar</packaging>
  <name>LDAPTIVE INTEGRATION TESTS</name>
  <description>Ldaptive server integration tests</description>
  <parent>
    <groupId>org.ldaptive</groupId>
    <artifactId>ldaptive-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive-templates</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive-beans</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.codemodel</groupId>
      <artifactId>codemodel</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>httpunit</groupId>
      <artifactId>httpunit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- JMeter Load Testing Dependencies -->
    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>ApacheJMeter_java</artifactId>
      <version>5.1.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>rhino</groupId>
      <artifactId>js</artifactId>
       <version>1.7R2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.config</include>
          <include>**/*.ldif</include>
          <include>**/*.xml</include>
          <include>**/*.properties</include>
          <include>**/*.credential</include>
        </includes>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>false</filtering>
        <includes>
          <include>**/*.keytab</include>
          <include>**/*.keystore</include>
          <include>**/*.p12</include>
          <include>**/*.truststore</include>
          <include>**/*.crt</include>
          <include>**/*.jpg</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-has-env</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireProperty>
                  <property>ldapTestHost</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapSslTestHost</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBaseDn</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBindDn</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBindCredential</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapTestGroup</property>
                </requireProperty>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-integration-jar-to-jmeter-ext</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/jmeter/lib/ext</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.build.directory}</directory>
                  <includes>
                    <include>${project.artifactId}-${project.version}-tests.jar</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
          <execution>
            <id>copy-testng</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
              <resources>
                <resource>
                  <directory>${basedir}/src/test/testng</directory>
                  <filtering>true</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Xms1g -Xmx2g</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${project.build.directory}/test-classes/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          <!-- sometimes useful if testng runs out of memory
          <disableXmlReport>true</disableXmlReport>
          -->
          <systemProperties>
            <property>
              <name>log4j.configuration</name>
              <value>log4j.xml</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>test</phase>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <classpathScope>test</classpathScope>
              <mainClass>org.ldaptive.doc.ClassGenerator</mainClass>
              <arguments>
                <argument>https://github.com/vt-middleware/ldaptive/blob/gh-pages/_includes/source/source.zip?raw=true</argument>
                <argument>${project.build.directory}</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-test-source</id>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <phase>pre-integration-test</phase>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-test-sources/ldaptive</source>
                <source>${project.build.directory}/generated-test-sources/ldaptive-docs</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.lazerycode.jmeter</groupId>
        <artifactId>jmeter-maven-plugin</artifactId>
        <version>2.9.0</version>
        <executions>
          <!-- Run JMeter tests -->
          <execution>
            <id>jmeter-tests</id>
            <goals>
              <goal>jmeter</goal>
            </goals>
          </execution>
          <!-- Fail build on errors in test -->
          <execution>
            <id>jmeter-check-results</id>
            <goals>
              <goal>results</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <errorRateThresholdInPercent>1</errorRateThresholdInPercent>
          <generateReports>true</generateReports>
          <propertiesReportGenerator>
            <jmeter.reportgenerator.overall_granularity>1000</jmeter.reportgenerator.overall_granularity>
          </propertiesReportGenerator>
          <propertiesJMeter>
            <jmeter.save.saveservice.thread_counts>true</jmeter.save.saveservice.thread_counts>
            <jmeter.reportgenerator.apdex_satisfied_threshold>100</jmeter.reportgenerator.apdex_satisfied_threshold>
            <jmeter.reportgenerator.apdex_tolerated_threshold>200</jmeter.reportgenerator.apdex_tolerated_threshold>
          </propertiesJMeter>
          <propertiesUser>
            <ldapUrl>ldap://ldap-test</ldapUrl>
            <numSearchSingleUsers>20</numSearchSingleUsers>
            <numSearchPooledUsers>20</numSearchPooledUsers>
            <numSearchDefaultUsers>20</numSearchDefaultUsers>
            <numAuthDefaultUsers>20</numAuthDefaultUsers>
            <userRampUp>2</userRampUp>
            <runDuration>5</runDuration>
            <autoReconnect>false</autoReconnect>
            <minPoolSize>10</minPoolSize>
            <maxPoolSize>10</maxPoolSize>
          </propertiesUser>
          <jmeterExtensions>
            <artifact>org.ldaptive:ldaptive:${project.version}</artifact>
            <artifact>kg.apc:jmeter-plugins-graphs-vs:2.0</artifact>
            <artifact>kg.apc:jmeter-plugins-graphs-composite:2.0</artifact>
            <artifact>org.springframework:spring-core:jar:5.1.9.RELEASE</artifact>
          </jmeterExtensions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork>
          <debug>true</debug>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
            <arg>--add-exports</arg>
            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
          </compilerArgs>
          <source>11</source>
          <target>11</target>
        </configuration>
        <executions>
          <execution>
            <phase>integration-test</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.siom79.japicmp</groupId>
        <artifactId>japicmp-maven-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
